--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <a href='https://twitter.com/explore' target='_blank'><img src='img\twitter.jpg'/></a><button class='favbtn' id='favbtn_020'><span class='image-text'>트위터</span></button>
                             </li>
                             <li>
-                                <a href='https://www.instagram.com/' target='_blank'><img src='img\instagram.jpg'/></a><button class='favbtn' id='favbtn_021'><span class='image-text'>인스타그램</span></button>
+                                <a href='https://www.instagram.com/' target='_blank'><img src='img\Instagram.jpg'/></a><button class='favbtn' id='favbtn_021'><span class='image-text'>인스타그램</span></button>
                             </li>
                             <li>
                                 <a href='https://cy.cyworld.com/cyMain' target='_blank'><img src='img\cyworld.jpg'/></a><button class='favbtn' id='favbtn_025'><span class='image-text'>싸이월드</span></button>
