--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,11 @@
         </section>
         <!-- 사이드 시작 -->
         <aside>
-            <!-- 광고 넣을 예정 -->
+            <ins class="kakao_ad_area" style="display:none;" 
+            data-ad-unit    = "DAN-rhlogersq59w" 
+            data-ad-width   = "160" 
+            data-ad-height  = "600"></ins> 
+           <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         </aside>
         <!-- 사이드 끝 -->
     </main>
