--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@
         <!-- 사이드 시작 -->
         <aside>
         <ins class="kakao_ad_area" style="display:none;" 
-        data-ad-unit    = "DAN-rhlogersq59w" 
+        data-ad-unit    = "DAN-qe4bp5uj22ck" 
         data-ad-width   = "160" 
         data-ad-height  = "600"></ins> 
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
