--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             <h5>※위 정보들은 사용자님의 컴퓨터에 저장이 됩니다.※</h5>
         </form>
         <h1 class='name-greeting greeting'></h1>
-
+        <ins class="kakao_ad_area" style="display:none;" 
+        data-ad-unit    = "DAN-1hrm1oyzfh5bq" 
+        data-ad-width   = "728" 
+        data-ad-height  = "90"></ins> 
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         <section class='container-list'>
             <article class='wrap-items' id='bookmarks' style='display:none'>
                 <h2 class='list-title' id='bookmark'>즐겨찾기</h2>
