--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
                                         <a href='http://game.daum.net/' target='_blank'><img src='img\daumgame.jpg'/></a><button class='favbtn' id='favbtn_225'><span class='image-text'>다음게임</span></button>
                                     </li>
                                     <li>
-                                        <a href='https://www.google.co.kr/' target='_blank'><img src='img\nexon.jpg'/></a><button class='favbtn' id='favbtn_226'><span class='image-text'>넥슨</span></button>
+                                        <a href='http://www.nexon.com' target='_blank'><img src='img\nexon.jpg'/></a><button class='favbtn' id='favbtn_226'><span class='image-text'>넥슨</span></button>
                                     </li>
                                     <li>
                                         <a href='http://www.netmarble.net/' target='_blank'><img src='img\netmarble.jpg'/></a><button class='favbtn' id='favbtn_227'><span class='image-text'>넷마블</span></button>
