--- a/index.html
+++ b/index.html
@@ -1527,6 +1527,10 @@
                 </section>
                 <!-- 우 사이드 시작 -->
                 <aside>
+                    <script src="https://ads-partners.coupang.com/g.js"></script>
+                    <script>
+                        new PartnersCoupang.G({ id:243258 });
+                    </script>
                 </aside>
                 <!-- 우 사이드 끝 -->
             </section>
