--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             <h5>※위 정보들은 사용자님의 컴퓨터에 저장이 됩니다.※</h5>
         </form>
         <h1 class='name-greeting greeting'></h1>
+        <ins class="kakao_ad_area" style="display:none;" 
+        data-ad-unit    = "DAN-1h84uemuhput2" 
+        data-ad-width   = "728" 
+        data-ad-height  = "90"></ins> 
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
             <section class="section-aside">
                 <!-- 좌 사이드 시작 -->
                 <aside>
