--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
                     data-ad-width   = "160" 
                     data-ad-height  = "600"></ins> 
                     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+                    <br>
                     <script src="https://ads-partners.coupang.com/g.js"></script>
                     <script>
-                        new PartnersCoupang.G({ id:243258 });
+                        new PartnersCoupang.G({"id":243258,"subId":null});
                     </script>
+                    <br>
                     <ins class="kakao_ad_area" style="display:none;" 
                     data-ad-unit    = "DAN-to2bhaletkqd" 
                     data-ad-width   = "160" 
@@ -1532,7 +1534,7 @@
                 <aside>
                     <script src="https://ads-partners.coupang.com/g.js"></script>
                     <script>
-                        new PartnersCoupang.G({ id:243258 });
+                        new PartnersCoupang.G({ id:243299 });
                     </script>
                 </aside>
                 <!-- 우 사이드 끝 -->
