--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
                 <!-- 좌 사이드 시작 -->
                 <aside>
                     <ins class="kakao_ad_area" style="display:none;" 
-                    data-ad-unit    = "DAN-1h7wgojhgv9dl" 
-                    data-ad-width   = "160" 
-                    data-ad-height  = "600"></ins> 
+                        data-ad-unit    = "DAN-to2bhaletkqd" 
+                        data-ad-width   = "160" 
+                        data-ad-height  = "600"></ins> 
                     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-                    <ins class="kakao_ad_area" style="display:none;" 
-                    data-ad-unit    = "DAN-to2bhaletkqd" 
-                    data-ad-width   = "160" 
-                    data-ad-height  = "600"></ins> 
-                   <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+                    <script src="https://ads-partners.coupang.com/g.js"></script>
+                    <script>
+                        new PartnersCoupang.G({ id:243258 });
+                    </script>
                 </aside>
                 <!-- 좌 사이드 끝 -->
                 <section class='container-list'>
