--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                         </ul>
                     </article>
 
-                    <article class='wrap-items' id='portal'>
+                    <article class='wrap-items' id='ott'>
                         <h2 class='list-title'>온라인 동영상 스트리밍</h2>
                         <ul id='list-title-content' style='display:none'>
                             <li>
@@ -1184,7 +1184,7 @@
                         </ul>
                     </article>
 
-                    <article class='wrap-items' id='exercise'>
+                    <article class='wrap-items' id='art'>
                         <h2 class='big-title'>미술</h2>
                         <ul id='list-title-content' style='display:none'>
                             <li>
@@ -1468,7 +1468,7 @@
                         </ul>
                     </article>
 
-                    <article class='wrap-items' id='exercise'>
+                    <article class='wrap-items' id='program'>
                         <h2 class='big-title'>컴퓨터 프로그램 다운받기</h2>
                         <ul id='list-title-content' style='display:none'>
                             <li>
