--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <h1 class='name-greeting greeting'></h1>
             <section class="section-aside">
                 <!-- 좌 사이드 시작 -->
-                <aside>
-                </aside>
+                <!-- <aside>
+                </aside> -->
                 <!-- 좌 사이드 끝 -->
                 <section class='container-list'>
                     <article class='wrap-items' id='bookmarks' style='display:none'>
@@ -1522,6 +1522,9 @@
                         data-ad-height  = "600"></ins> 
                     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
                     <script src="https://ads-partners.coupang.com/g.js"></script>
+                    <script>
+                        new PartnersCoupang.G({ id:243299 });
+                    </script>
                 </aside>
                 <!-- 우 사이드 끝 -->
             </section>
