--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' href='home.css'>
-    <link rel='icon' href='linkzero.ico'>
+    <link rel='icon' href='icon.ico'>
     <title>LinkZero</title>
 </head>
 
