--- a/index.html
+++ b/index.html
@@ -1525,6 +1525,10 @@
                     data-ad-width   = "160" 
                     data-ad-height  = "600"></ins> 
                     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+                    <script src="https://ads-partners.coupang.com/g.js"></script>
+                    <script>
+                        new PartnersCoupang.G({ id:243258 });
+                    </script>
                 </aside>
                 <!-- 우 사이드 끝 -->
             </section>
