--- a/index.html
+++ b/index.html
@@ -1529,7 +1529,7 @@
                 </section>
                 <!-- 우 사이드 시작 -->
                 <aside id='aside-right'>
-                    <div id='kakaoads2'>+
+                    <div id='kakaoads2'>
                         <ins class="kakao_ad_area" style="display:none;" 
                         data-ad-unit    = "DAN-to2bhaletkqd" 
                         data-ad-width   = "160" 
@@ -1537,7 +1537,6 @@
                         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
                     </div>
                     <div id='coupangads2'>
-                        <script src="https://ads-partners.coupang.com/g.js"></script>
                         <script>
                             new PartnersCoupang.G({ id:243299 });
                         </script>
