--- a/index.html
+++ b/index.html
@@ -30,16 +30,23 @@
             <h5>※위 정보들은 사용자님의 컴퓨터에 저장이 됩니다.※</h5>
         </form>
         <h1 class='name-greeting greeting'></h1>
+        <div id="topAd">
+            <ins class="kakao_ad_area" style="display:none;" 
+            data-ad-unit    = "DAN-to2bhaletkqd" 
+            data-ad-width   = "728" 
+            data-ad-height  = "90"></ins> 
+            <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        </div>
             <section class="section-aside">
                 <!-- 좌 사이드 시작 -->
                 <aside id='aside-left'>
-                    <script src="https://ads-partners.coupang.com/g.js"></script>
-                    <script>new PartnersCoupang.G({ id:243258 });</script>
-                    <ins class="kakao_ad_area" style="display:none;" 
-                    data-ad-unit    = "DAN-1h7wgojhgv9dl" 
-                    data-ad-width   = "160" 
-                    data-ad-height  = "600"></ins> 
-                   <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>   
+                <script src="https://ads-partners.coupang.com/g.js"></script>
+                <script>new PartnersCoupang.G({ id:243258 });</script>
+                <ins class="kakao_ad_area" style="display:none;" 
+                data-ad-unit    = "DAN-1h7wgojhgv9dl" 
+                data-ad-width   = "160" 
+                data-ad-height  = "600"></ins> 
+                <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>   
                 </aside>
                 <!-- 좌 사이드 끝 -->
                 <section class='container-list'>
@@ -1523,13 +1530,11 @@
                 </section>
                 <!-- 우 사이드 시작 -->
                 <aside id='aside-right'>
-                    <script src="https://ads-partners.coupang.com/g.js"></script>
-                    <script>new PartnersCoupang.G({ id:243299 });</script>
-                    <ins class="kakao_ad_area" style="display:none;" 
-                    data-ad-unit    = "DAN-to2bhaletkqd" 
-                    data-ad-width   = "160" 
-                    data-ad-height  = "600"></ins> 
-                    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+                <ins class="kakao_ad_area" style="display:none;" 
+                data-ad-unit    = "DAN-1h7wgojhgv9dl" 
+                data-ad-width   = "160" 
+                data-ad-height  = "600"></ins> 
+                <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
                 </aside>
                 <!-- 우 사이드 끝 -->
             </section>
