--- a/index.html
+++ b/index.html
@@ -30,25 +30,10 @@
             <h5>※위 정보들은 사용자님의 컴퓨터에 저장이 됩니다.※</h5>
         </form>
         <h1 class='name-greeting greeting'></h1>
-        <div id="topAd">
-            <ins class="kakao_ad_area" style="display:none;" 
-            data-ad-unit    = "DAN-to2bhaletkqd" 
-            data-ad-width   = "728" 
-            data-ad-height  = "90"></ins> 
-            <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-        </div>
             <section class="section-aside">
                 <!-- 좌 사이드 시작 -->
-                <!-- <aside id='aside-left'>
-                <script src="https://ads-partners.coupang.com/g.js"></script>
-                <script>
-                    new PartnersCoupang.G({ id:243299 });
-                </script>
-                <script src="https://ads-partners.coupang.com/g.js"></script>
-                <script>
-                    new PartnersCoupang.G({ id:243258 });
-                </script>
-                </aside> -->
+                <aside id='aside-left'>
+                </aside>
                 <!-- 좌 사이드 끝 -->
                 <section class='container-list'>
                     <article class='wrap-items' id='bookmarks' style='display:none'>
@@ -1531,16 +1516,6 @@
                 </section>
                 <!-- 우 사이드 시작 -->
                 <aside id='aside-right'>
-                <ins class="kakao_ad_area" style="display:none;" 
-                data-ad-unit    = "DAN-1h7wgojhgv9dl" 
-                data-ad-width   = "160" 
-                data-ad-height  = "600"></ins> 
-                <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-                <script src="https://ads-partners.coupang.com/g.js"></script>
-                <script>
-                new PartnersCoupang.G({ id:243299 });
-                new PartnersCoupang.G({ id:243258 });
-                </script>
                 </aside>
                 <!-- 우 사이드 끝 -->
             </section>
