add ads change ads
ads

--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
             <section class="section-aside">
                 <!-- 좌 사이드 시작 -->
                 <aside id='aside-left'>
-                    <script src="https://ads-partners.coupang.com/g.js"></script>
-                    <script>
-                        new PartnersCoupang.G({ id:243258 });
-                    </script>
                     <ins class="kakao_ad_area" style="display:none;" 
                     data-ad-unit    = "DAN-1h7wgojhgv9dl" 
                     data-ad-width   = "160" 
@@ -49,7 +45,10 @@
                         <h2 class='list-title' id='bookmark'>즐겨찾기</h2>
                         <ul id='favlist-content' style='display:none'></ul>
                     </article>
-
+                    <script src="https://ads-partners.coupang.com/g.js"></script>
+                    <script>
+                        new PartnersCoupang.G({"id":243258,"subId":null});
+                    </script>
                     <article class='wrap-items' id='corona19'>
                         <h2 class='list-title'>코로나19</h2>
                         <ul id='list-title-content' style='display:none'>
@@ -513,7 +512,10 @@
                             </li>
                         </ul>
                     </article>
-
+                    <script src="https://ads-partners.coupang.com/g.js"></script>
+                    <script>
+                        new PartnersCoupang.G({"id":243299,"subId":null});
+                    </script>
                     <article class='wrap-items' id='ott'>
                         <h2 class='list-title'>온라인 동영상 스트리밍</h2>
                         <ul id='list-title-content' style='display:none'>
@@ -950,7 +952,10 @@
                             </li>
                         </ul>
                     </article>
-                    
+                    <script src="https://ads-partners.coupang.com/g.js"></script>
+                    <script>
+                        new PartnersCoupang.G({ id:243988 });
+                    </script>
                     <article class='wrap-items' id='game'>
                         <h2 class='big-title'>게임 / 관련 사이트</h2>
                         <ul id='big-title-content' style='display:none'>
@@ -1336,7 +1341,10 @@
                             </li> 
                         </ul>
                     </article>
-
+                    <script src="https://ads-partners.coupang.com/g.js"></script>
+                    <script>
+                        new PartnersCoupang.G({ id:243991 });
+                    </script>
                     <article class='wrap-items' id='phoneInternet'>
                         <h2 class='big-title'>통신사 / 휴대폰 / 중고폰</h2>
                         <ul id='big-title-content' style='display:none'>
@@ -1530,10 +1538,6 @@
                     data-ad-width   = "160" 
                     data-ad-height  = "600"></ins> 
                     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-                    <script src="https://ads-partners.coupang.com/g.js"></script>
-                    <script>
-                        new PartnersCoupang.G({ id:243299 });
-                    </script>
                 </aside>
                 <!-- 우 사이드 끝 -->
             </section>
