add each aside css
aside css

--- a/index.html
+++ b/index.html
@@ -1526,9 +1526,7 @@
                     data-ad-width   = "160" 
                     data-ad-height  = "600"></ins> 
                     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-                    <script>
-                        new PartnersCoupang.G({"id":243299,"subId":null});
-                    </script>
+                    <script>new PartnersCoupang.G({"id":243299,"subId":null});</script>
                 </aside>
                 <!-- 우 사이드 끝 -->
             </section>
