--- a/index.html
+++ b/index.html
@@ -1545,6 +1545,11 @@
                             <button type='button' id='allDelBtn'>전체 삭제</button>
                         </div>
                     </div>
+                    <ins class="kakao_ad_area" style="display:none;" 
+                    data-ad-unit    = "DAN-to2bhaletkqd" 
+                    data-ad-width   = "300" 
+                    data-ad-height  = "250"></ins> 
+                    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
                 </aside>
                 <!-- 우 사이드 끝 -->
             </section>
