--- a/index.html
+++ b/index.html
@@ -1550,6 +1550,11 @@
                     data-ad-width   = "300" 
                     data-ad-height  = "250"></ins> 
                     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+                    <ins class="kakao_ad_area" style="display:none;" 
+                    data-ad-unit    = "DAN-1h7wgojhgv9dl" 
+                    data-ad-width   = "300" 
+                    data-ad-height  = "250"></ins> 
+                    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
                 </aside>
                 <!-- 우 사이드 끝 -->
             </section>
