memo css change
css

--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
                 </section>
                 <!-- 우 사이드 시작 -->
                 <aside id='aside-right'>
-                    <div class='memo-box'>
+                    <div class='memo'>
                         <h3>메모장</h3>
                         <form class='write-box'>
                             <input type='text' class='memo-text' placeholder='Ex) 3월 7일 은행 홈페이지 확인하기'/>
