--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <i class="fas fa-search"></i>
             </div>
         </form>
+        <div class='topad'>
+            <script src="https://ads-partners.coupang.com/g.js"></script>
+            <script>
+                new PartnersCoupang.G({ id:243299 });
+            </script>
+        </div>
             <section class="section-aside">
                 <section class='container-list'>
                     <article class='wrap-items' id='bookmarks' style='display:none'>
