--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-    <!-- 헤더 시작 -->
+    <!-- header start -->
     <header>
         <button id='info' onclick='info()'>사용법</button>
         <button id='removebmk' onclick='removebmk()'>북마크 전부 삭제</button>
         <button id='removeName' onclick='removeName()'>이름 지우기</button>
         <button id='favWeb' onclick='favWeb()'>즐겨찾기 추가</button>
     </header>
-    <!-- 헤더 끝 -->
-    <!-- 메인 시작 -->
+    <!-- end of header -->
+    <!-- main start -->
     <main class='lzMainContent'>
         <div class='date'>
             <h4>0000-00-00</h4>
@@ -1525,7 +1525,7 @@
                     </article>
 
                 </section>
-                <!-- 우 사이드 시작 -->
+                <!-- R-aside start -->
                 <aside id='aside-right'>
                     <div class='memo'>
                         <h3>메모장</h3>
@@ -1564,11 +1564,11 @@
                         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
                     </div>
                 </aside>
-                <!-- 우 사이드 끝 -->
+                <!-- end of R-aside -->
             </section>
     </main>
-    <!-- 메인 끝 -->
-    <!-- 푸터 시작 -->
+    <!-- end of main -->
+    <!-- footer start -->
     <footer>
         <div id="footer-inside">
             <span class="copyrights">
@@ -1579,7 +1579,7 @@
             </span>
         </div>
     </footer>
-    <!-- 푸터 끝 -->                      
+    <!-- end of footer -->                      
     <script src='dateClock.js'></script>
     <script src='hideShow.js'></script>
     <script src='favorite.js'></script>
