--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/30ab7dcb0e.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='home.css'>
     <link rel='icon' href='icon.ico'>
+    <script data-ad-client="ca-pub-1367596229390165" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>LinkZero</title>
 </head>
 
@@ -1552,16 +1553,6 @@
                         </div>
                     </div>
                     <div class="ads">
-                        <ins class="kakao_ad_area" style="display:none;" 
-                        data-ad-unit    = "DAN-to2bhaletkqd" 
-                        data-ad-width   = "300" 
-                        data-ad-height  = "250"></ins> 
-                        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-                        <ins class="kakao_ad_area" style="display:none;" 
-                        data-ad-unit    = "DAN-1h7wgojhgv9dl" 
-                        data-ad-width   = "300" 
-                        data-ad-height  = "250"></ins> 
-                        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
                     </div>
                 </aside>
                 <!-- end of R-aside -->
