--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta name="naver-site-verification" content="8f5eda850f20b0e3cdf6b7f721f9cbef87cff674"/>
     <script src="https://kit.fontawesome.com/30ab7dcb0e.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='home.css'>
     <link rel='icon' href='icon.ico'>
