--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <meta name="naver-site-verification" content="8f5eda850f20b0e3cdf6b7f721f9cbef87cff674"/>
+    <meta name="description" content="인터넷에 유포된 여러 웹사이트들의 링크를 수집해 사용자들이 쉽고 간편하게 원하는 사이트를 찾을 수 있게 카테고리별로 분류하여 모아두었음">
+    <meta property="og:type" content="website"> 
+    <meta property="og:title" content="LinkZero">
+    <meta property="og:description" content="인터넷에 유포된 여러 웹사이트들의 링크를 수집해 사용자들이 쉽고 간편하게 원하는 사이트를 찾을 수 있게 카테고리별로 분류하여 모아두었음">
+    <meta property="og:image" content="https://link0.shop//icon.ico">
+    <meta property="og:url" content="https://link0.shop/">
+    <meta name="twitter:card" content="링크 모음">
+    <meta name="twitter:title" content="LinkZero">
+    <meta name="twitter:description" content="인터넷에 유포된 여러 웹사이트들의 링크를 수집해 사용자들이 쉽고 간편하게 원하는 사이트를 찾을 수 있게 카테고리별로 분류하여 모아두었음">
+    <meta name="twitter:image" content="https://link0.shop//icon.ico">
+    <meta name="twitter:domain" content="link0.shop">
     <script src="https://kit.fontawesome.com/30ab7dcb0e.js" crossorigin="anonymous"></script>
+    <link rel="canonical" href="https://link0.shop/index.html">
     <link rel='stylesheet' href='home.css'>
     <link rel='icon' href='icon.ico'>
     <script data-ad-client="ca-pub-1367596229390165" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
