--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta name="twitter:description" content="인터넷에 유포된 여러 웹사이트들의 링크를 수집해 사용자들이 쉽고 간편하게 원하는 사이트를 찾을 수 있게 카테고리별로 분류하여 모아두었음">
     <meta name="twitter:image" content="https://link0.shop//icon.ico">
     <meta name="twitter:domain" content="link0.shop">
-    <meta name="viewport" content="width=device-width">
     <script src="https://kit.fontawesome.com/30ab7dcb0e.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://link0.shop/index.html">
     <link rel='stylesheet' href='home.css'>
@@ -32,6 +31,7 @@
         <button id='removebmk' onclick='removebmk()'>북마크 전부 삭제</button>
         <button id='removeName' onclick='removeName()'>이름 지우기</button>
         <button id='favWeb' onclick='favWeb()'>즐겨찾기 추가</button>
+        <button id='discuss'><a href='discuss.html'>건의</a></button>
     </header>
     <!-- end of header -->
     <!-- main start -->
