--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="naver-site-verification" content="8f5eda850f20b0e3cdf6b7f721f9cbef87cff674"/>
     <meta name="description" content="인터넷에 유포된 여러 웹사이트들의 링크를 수집해 사용자들이 쉽고 간편하게 원하는 사이트를 찾을 수 있게 카테고리별로 분류하여 모아두었음">
     <meta property="og:type" content="website"> 
-    <meta property="og:title" content="LinkZero">
+    <meta property="og:title" content="링크제로">
     <meta property="og:description" content="인터넷에 유포된 여러 웹사이트들의 링크를 수집해 사용자들이 쉽고 간편하게 원하는 사이트를 찾을 수 있게 카테고리별로 분류하여 모아두었음">
     <meta property="og:image" content="https://link0.shop//icon.ico">
     <meta property="og:url" content="https://link0.shop/">
     <meta name="twitter:card" content="링크 모음">
-    <meta name="twitter:title" content="LinkZero">
+    <meta name="twitter:title" content="링크제로">
     <meta name="twitter:description" content="인터넷에 유포된 여러 웹사이트들의 링크를 수집해 사용자들이 쉽고 간편하게 원하는 사이트를 찾을 수 있게 카테고리별로 분류하여 모아두었음">
     <meta name="twitter:image" content="https://link0.shop//icon.ico">
     <meta name="twitter:domain" content="link0.shop">
