html fix commit 1
gomtv logo change
search-form target add

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h5>※입력하시는 정보들은 사용자님의 컴퓨터에 저장이 됩니다.※</h5>
         </form>
         <h1 class='name-greeting greeting'></h1>
-        <form class='search-form' action='https://www.google.com/search' method='GET'>
+        <form class='search-form' action='https://www.google.com/search' method='GET' target='_blank'>
             <div class='mx-auto mt-5 search-bar input-group mb-3'>
                 <input name='q' type='text' class='search-txt' placeholder='검색 또는 URL 입력'>
                 <i class="fas fa-search"></i>
