--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                             <a href='https://www.netflix.com/kr/' target='_blank'><img src='img\netflix.jpg'/></a><button class='favbtn' id='favbtn_104'><span class='image-text'>넷플릭스</span></button>
                             </li>
                             <li>
-                            <a href='http://www.gomtv.com/' target='_blank'><img src='img\netflix.jpg'/></a><button class='favbtn' id='favbtn_368'><span class='image-text'>곰TV</span></button>
+                            <a href='http://www.gomtv.com/' target='_blank'><img src='img\gomtv.jpg'/></a><button class='favbtn' id='favbtn_368'><span class='image-text'>곰TV</span></button>
                             </li>
                             <li>
                             <a href='https://play.watcha.net/' target='_blank'><img src='img\watchaplay.jpg'/></a><button class='favbtn' id='favbtn_105'><span class='image-text'>왓챠플레이</span></button>
